--- a/oneidfrontend/src/pages/LandingPage.scss
+++ b/oneidfrontend/src/pages/LandingPage.scss
@@ -52,10 +52,10 @@
 }
 
 .intro-section {
-    background-color: #0078D4; // Main blue color
+    background-color: #0078D4;
     color: white;
     width: 100%;
-    padding: 60px 0; // Increase padding for better spacing
+    padding: 60px 0;
 }
 
 .main-heading {
@@ -65,28 +65,28 @@
 
 .sub-heading {
     font-size: 1.5em;
-    margin: 0.5em 0 2em 0; // Adjust margin for better spacing
+    margin: 0.5em 0 2em 0;
 }
 
 .create-id-button {
-    background-color: #28a745; // Green color for button
+    background-color: #28a745;
     color: white;
     padding: 15px 30px;
     border-radius: 5px;
     text-decoration: none;
     font-size: 1.2em;
     margin-top: 1em;
-    transition: background-color 0.3s; // Smooth transition for hover
+    transition: background-color 0.3s;
 }
 
 .create-id-button:hover {
-    background-color: #218838; // Darker green on hover
+    background-color: #218838;
 }
 
 .service-intro {
-    background-color: #002d72; // Dark blue section
+    background-color: #002d72;
     color: white;
-    padding: 50px 0; // Increased padding for better alignment
+    padding: 50px 0; 
     width: 100%;
 }
 
