--- a/oneidfrontend/src/components/Navbar/Navbar.scss
+++ b/oneidfrontend/src/components/Navbar/Navbar.scss
@@ -1,11 +1,72 @@
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    padding: 15px;
-    background-color: #0078d4;
-}
+// .navbar{
+//     display: flex;
+//     justify-content: space-around;
+//     padding: 15px;
+//     background-color: #0078d4;
+// }
 
-.navbar a {
-    color: white;
+// .navbar a {
+//     color: white;
+//     text-decoration: none;
+// }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f3f3f3;
+    width: 100%;
+  }
+  
+  .navbar-left {
+    display: flex;
+    align-items: center;
+  }
+  
+  .app-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-right: 20px;
+  }
+  
+  .navbar-right {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-link {
+    margin-right: 15px;
     text-decoration: none;
-}
+    color: #333;
+    font-size: 1em;
+  }
+  
+  .search-icon {
+    margin-right: 15px;
+    font-size: 1.2em;
+    cursor: pointer;
+  }
+  
+  .login-btn,
+  .signup-btn {
+    margin-right: 10px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .login-btn {
+    background-color: #e0e0e0;
+  }
+  
+  .signup-btn {
+    background-color: #0078D4;
+    color: white;
+  }
+  
+  .signup-btn:hover {
+    background-color: #005a9e;
+  }
+  
