--- a/oneidfrontend/src/components/Navbar/Navbar.scss
+++ b/oneidfrontend/src/components/Navbar/Navbar.scss
@@ -16,18 +16,28 @@
     font-size: 1.5em;
     font-weight: bold;
   }
-  
+
   .hamburger {
-    display: block; // Initially hidden
-    position: fixed;
+    display: block;
     font-size: 2em;
     cursor: pointer;
     z-index: 2000;
-    margin-left: 10px;
-    background-color: lightgray;
+    background-color: lightblue;
     padding: 5px;
     border-radius: 5px;
   }
+  
+//   .hamburger {
+//     display: block; // Initially hidden
+//     position: fixed;
+//     font-size: 2em;
+//     cursor: pointer;
+//     z-index: 2000;
+//     margin-left: 10px;
+//     background-color: lightgray;
+//     padding: 5px;
+//     border-radius: 5px;
+//   }
   
   .navbar-right {
     display: flex;
@@ -74,27 +84,24 @@
   @media (max-width: 768px) {
     .hamburger {
       display: block; // Show hamburger icon on small screens
-      position: abolute;
+      position: fixed;
       top: 15px;
       right: 20px;
     }
 
     .navbar-right {
-        display: none;
-    }
-  
-    // .navbar-right {
-    //   display: none;
-    //   flex-direction: column;
-    //   position: absolute;
-    //   top: 50px;
-    //   right: 0;
-    //   background-color: #f3f3f3;
-    //   width: 200px;
-    //   padding: 10px;
-    //   border: 1px solid #ccc;
-    //   z-index: 1000;
-    // }
+        display: none; /* Initially hidden */
+        flex-direction: column;
+        position: absolute;
+        top: 50px;
+        right: 0;
+        background-color: #f3f3f3;
+        width: 200px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        z-index: 1000;
+      }
+
   
     .navbar-right.open {
       display: flex; // Show the dropdown when open
@@ -106,104 +113,11 @@
     .signup-btn {
       margin: 10px 0;
     }
+
+    .nav-link {
+        padding: 10px;
+        width: 100%;
+        text-align: center;
+    }
   }
   
-
-
-// .navbar {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     padding: 10px 20px;
-//     background-color: #f3f3f3;
-//     width: 100%;
-//   }
-  
-//   .navbar-left {
-//     display: flex;
-//     align-items: center;
-//   }
-  
-//   .app-title {
-//     font-size: 1.5em;
-//     font-weight: bold;
-//   }
-  
-//   .hamburger {
-//     display: none;
-//     font-size: 1.5em;
-//     cursor: pointer;
-//   }
-  
-//   .navbar-right {
-//     display: flex;
-//     align-items: center;
-//   }
-  
-//   .nav-link {
-//     margin-right: 15px;
-//     text-decoration: none;
-//     color: #333;
-//     font-size: 1em;
-//   }
-  
-//   .search-icon {
-//     margin-right: 15px;
-//     font-size: 1.2em;
-//     cursor: pointer;
-//   }
-  
-//   .login-btn,
-//   .signup-btn {
-//     margin-right: 10px;
-//     padding: 8px 16px;
-//     border: none;
-//     border-radius: 4px;
-//     cursor: pointer;
-//   }
-  
-//   .login-btn {
-//     background-color: #e0e0e0;
-//   }
-  
-//   .signup-btn {
-//     background-color: #0078D4;
-//     color: white;
-//   }
-  
-//   .signup-btn:hover {
-//     background-color: #005a9e;
-//   }
-  
-// @media (max-width: 768px) {
-//     .hamburger {
-//         display: block;
-//     }
-
-//     .navbar-right {
-//         display: none;
-//         flex-direction: column;
-//         position: absolute;
-//         top: 50px;
-//         right: 0;
-//         background-color: #f3f3f3;
-//         width: 200px;
-//         padding: 10px;
-//         border: 1px solid #ccc;
-//         z-index: 1000;
-//     }
-
-//     .navbar-right.open {
-//         display:flex;
-//     }
-
-//     .nav-link {
-//         margin: 10px 0;
-//     }
-
-//     .search-icon,
-//     .login-btn,
-//     .signup-btn {
-//         margin: 10px 0;
-//     }
-// }
