--- a/oneidfrontend/src/pages/Error404Page.scss
+++ b/oneidfrontend/src/pages/Error404Page.scss
@@ -1,24 +1,24 @@
 .error-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px;
-    background-color: #f3f3f3;
-    min-height: 100vh;
-    text-align: center;
-  }
-  
-  .hat-placeholder {
-    margin-bottom: 20px;
-  }
-  
-  .emoji {
-    font-size: 4em;
-    margin-bottom: 10px;
-  }
-  
-  h2 {
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  background-color: #f3f3f3;
+  min-height: 100vh;
+  text-align: center;
+}
+
+.error-image {
+  margin-bottom: 20px;
+}
+
+.error-image img {
+  width: 150px; // width adjusment here if needed
+  height: auto;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
