--- a/oneidfrontend/src/pages/SystemInProgressPage.scss
+++ b/oneidfrontend/src/pages/SystemInProgressPage.scss
@@ -1,29 +1,29 @@
 .progress-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px;
-    background-color: #f3f3f3;
-    min-height: 100vh;
-    text-align: center;
-  }
-  
-  .gear-placeholder {
-    margin-bottom: 20px;
-  }
-  
-  .emoji {
-    font-size: 4em;
-    margin-bottom: 10px;
-  }
-  
-  h2 {
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  background-color: #f3f3f3;
+  min-height: 100vh;
+  text-align: center;
+}
+
+.gear-image {
+  margin-bottom: 20px;
+}
+
+.gear-image img {
+  width: 150px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
