--- a/oneidfrontend/src/pages/LoginPage.scss
+++ b/oneidfrontend/src/pages/LoginPage.scss
@@ -21,7 +21,7 @@ h2 {
 
 .separator-line {
     width: 100%;
-    max-width: 300px; /* Match the form width */
+    max-width: 330px; /* Match the form width */
     height: 2px;
     background-color: white;
     margin: 10px 0 20px;
@@ -32,7 +32,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 300px; /* Form width constraint */
+    max-width: 300px;
 }
 
 .login-form label {
@@ -51,8 +51,8 @@ h2 {
 }
 
 .login-page-btn {
-    padding: 12px 0; /* Adjusted for consistent height */
-    width: 100%; /* Full width to match input */
+    padding: 12px 0; 
+    width: 100%; 
     background-color: #28a745;
     color: white;
     font-size: 1em;
