oneid verified and unverified pages complete, verifiyidentitypage done as well with pngs added for all

--- a/oneidfrontend/src/pages/OneTimePasscodePage.scss
+++ b/oneidfrontend/src/pages/OneTimePasscodePage.scss
@@ -9,9 +9,9 @@
   }
   
   .otp-icon {
-    font-size: 3em; /* Adjusts size of emoji */
+    width: 200px; /* Adjust size as needed */
     margin-bottom: 20px;
-  }
+}
   
   h2 {
     font-size: 1.5em;
