--- a/oneidfrontend/src/components/Navbar/Navbar.scss
+++ b/oneidfrontend/src/components/Navbar/Navbar.scss
@@ -35,16 +35,16 @@
 }
 
 .navbar-logo {
-  width: 80px; // Adjust width as needed
+  width: 80px;
   height: auto;
-  margin-right: 10px; // Space between logo and text
-  filter: brightness(0.6); // Adjust this value to make it darker or lighter
+  margin-right: 10px; 
+  filter: brightness(0.6);
 }
 
 .app-title {
   font-size: 1.5em;
   font-weight: bold;
-  color: #000; /* Match the design color */
+  color: #000; 
 }
 
 .navbar-right {
