removed comments and adjusted values for pngs again

--- a/oneidfrontend/src/pages/CreateIDPage2.scss
+++ b/oneidfrontend/src/pages/CreateIDPage2.scss
@@ -13,7 +13,7 @@
 }
 
 .confirmation-image img {
-  width: 150px; // width adjust as needed
+  width: 150px; // width adjust as needed to make the image bigger or smaller for all pngs
   height: auto;
   margin-bottom: 10px;
 }
