--- a/oneidfrontend/src/pages/VerifyIdentityPage.scss
+++ b/oneidfrontend/src/pages/VerifyIdentityPage.scss
@@ -21,7 +21,7 @@ h2 {
 
 .line-separator {
     width: 100%;
-    max-width: 330px; /* Match width of input and button */
+    max-width: 330px;
     height: 2px;
     background-color: white;
     margin-bottom: 20px;
@@ -51,7 +51,7 @@ h2 {
 }
 
 .verify-btn {
-    width: 108%; /* Match width of the input field */
+    width: 108%; 
     padding: 12px 20px;
     background-color: #28a745;
     color: white;
