--- a/oneidfrontend/src/pages/Error404Page.scss
+++ b/oneidfrontend/src/pages/Error404Page.scss
@@ -13,7 +13,7 @@
 }
 
 .error-image img {
-  width: 150px; // width adjusment here if needed
+  width: 150px; 
   height: auto;
   margin-bottom: 10px;
 }
