--- a/oneidfrontend/src/pages/LoginPage.scss
+++ b/oneidfrontend/src/pages/LoginPage.scss
@@ -21,7 +21,7 @@ h2 {
 
 .separator-line {
     width: 100%;
-    max-width: 330px; /* Match the form width */
+    max-width: 330px;
     height: 2px;
     background-color: white;
     margin: 10px 0 20px;
