createidpage.js making api request to backend for registration, navigates to createidpage2 for email verifcation. Verifyidentitypage.js api calls set up for email verification

--- a/oneidfrontend/src/pages/VerifyIdentityPage.scss
+++ b/oneidfrontend/src/pages/VerifyIdentityPage.scss
@@ -50,6 +50,14 @@ h2 {
     font-size: 1em;
 }
 
+.verification-message {
+    margin-top: 15px;
+    color: #333;
+    font-size: 1em;
+    text-align: center;
+  }
+  
+
 .verify-btn {
     width: 108%; 
     padding: 12px 20px;
